Fixed outline contrast issue for dropdowns

--- a/css/styles.css
+++ b/css/styles.css
@@ -171,6 +171,10 @@ nav h1 a {
   min-width: 100px;
 }
 
+#filter-select select:focus{
+  outline: 2px solid tomato;
+}
+
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   width: 100%;
